<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="document_scann_lib_name" translatable="false">ScanLibrary</string>
    <string name="finish">Finish</string>
    <string name="crop">Crop</string>
    <string name="rotate">Rotate</string>
    <string name="cant_crop">Can\'t crop the image, change the points</string>
    <string name="transforming">Transforming...</string>

    <string name="mode_none">None</string>
    <string name="mode_black_white">Black &amp; White</string>
    <string name="mode_magic">Magic</string>
</resources>
