<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/rotate"
        android:icon="@drawable/ic_rotate_90_degrees_ccw_white_24dp"
        android:showAsAction="always"
        android:title="@string/rotate"/>

    <item
        android:id="@+id/crop"
        android:icon="@drawable/ic_crop_white_24dp"
        android:showAsAction="always"
        android:title="@string/crop"/>

    <item
        android:id="@+id/colors"
        android:icon="@drawable/ic_color_lens_white_24dp"
        android:showAsAction="always"
        android:title="@null">
        <menu>
            <group
                android:id="@+id/mode"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/mode_none"
                    android:title="@string/mode_none"/>
                <item
                    android:id="@+id/mode_black_and_white"
                    android:title="@string/mode_black_white"/>
                <item
                    android:id="@+id/mode_magic"
                    android:checked="true"
                    android:title="@string/mode_magic"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/done"
        android:icon="@drawable/ic_done_white_24dp"
        android:showAsAction="always"
        android:title="@string/finish"/>


</menu>